[package]
name = "dev-coverage"
version = "0.9.0"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Test coverage measurement and regression detection for Rust. Wraps cargo-llvm-cov. Part of the dev-* verification suite."

keywords = [
    "coverage",
    "testing",
    "verification",
    "llvm-cov",
    "ai-tools"
]

categories = [
    "development-tools",
    "development-tools::testing",
    "development-tools::profiling"
]

documentation = "https://docs.rs/dev-coverage"
repository = "https://github.com/jamesgober/dev-coverage"
homepage = "https://github.com/jamesgober/dev-coverage"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dev-report = { version = "0.9", path = "../dev-report" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
