[package]
name = "dev-coverage"
version = "0.9.2"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Code coverage with regression gates for Rust. Wraps cargo-llvm-cov: line / function / region kill rates, stored baselines, machine-readable verdicts. Part of the dev-* verification collection."

keywords = [
    "coverage",
    "testing",
    "llvm-cov",
    "ci",
    "regression"
]

categories = [
    "development-tools",
    "development-tools::testing",
    "development-tools::profiling"
]

documentation = "https://docs.rs/dev-coverage"
repository = "https://github.com/jamesgober/dev-coverage"
homepage = "https://github.com/jamesgober/dev-coverage"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dev-report = { version = "0.9", path = "../dev-report" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
